Fix tooltip position and visibility

--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,32 @@
 *{
     font-family: "Roboto Condensed", sans-serif;
 }
+#title{
+    text-align: center;
+    margin-bottom: 30px;
+}
+#graph{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
 #legend{
     position: fixed;
-    bottom: 150px;
-    left: 720px;
+    bottom: 280px;
+    left: 1000px;
 }
 
 #tooltip{
     background-color: red;
-    width: 400px;
-    height: 100px;
-    
+    position: fixed;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 10px;
+    text-align:center;
+    text-justify: auto;
+    font-size:medium;
+    font-weight: bold;
+
+
 }
